--- a/packages/apps/admin/src/container/AppointmentStatusByDepartment/appointment-status.scss
+++ b/packages/apps/admin/src/container/AppointmentStatusByDepartment/appointment-status.scss
@@ -1,39 +1,34 @@
+@import "~bootstrap/scss/functions";
 
- @import '~bootstrap/scss/functions';
-
- //custom colors
- @import "~@frontend-appointment/common-sass/src/scss/variables/custom-variables";
+//custom colors
+@import "~@frontend-appointment/common-sass/src/scss/variables/custom-variables";
 
 // // Customized Bootstrap variables
- @import "~@frontend-appointment/common-sass/src/scss/variables/custom-bootstrap-variable";
- @import '~bootstrap/scss/mixins';
- @import "~@frontend-appointment/common-sass/src/scss/_custom-mixins.scss";
- 
- 
- #appointment-status {
+@import "~@frontend-appointment/common-sass/src/scss/variables/custom-bootstrap-variable";
+@import "~bootstrap/scss/mixins";
+@import "~@frontend-appointment/common-sass/src/scss/_custom-mixins.scss";
+
+#appointment-status {
   .filter-message {
     .message {
       width: 200px;
     }
   }
 
-  .manage-title{
+  .manage-title {
     background-color: $white;
     padding: 30px 30px 15px;
     margin: 1rem 0 0;
-    @include border-radii(0.5rem,0.5rem, 0, 0);
-    
+    @include border-radii(0.5rem, 0.5rem, 0, 0);
   }
 
-  .manage-details{
+  .manage-details {
     height: calc(100vh - 310px);
     overflow: auto;
-    margin:0 0 1rem;
-    padding-top:0;
-    @include border-radii(0, 0,0.5rem,0.5rem);
+    margin: 0 0 1rem;
+    padding-top: 0;
+    @include border-radii(0, 0, 0.5rem, 0.5rem);
   }
-
- 
 
   .appointment-badge {
     float: right;
@@ -55,15 +50,13 @@
         height: 16px;
       }
 
-      .status-legend{
-        display:inline-flex;
-        flex-direction:column;
+      .status-legend {
+        display: inline-flex;
+        flex-direction: column;
         align-items: center;
       }
 
-
       a {
-
         color: $gray-600;
         font-weight: 500;
         margin-left: 4px;
@@ -81,8 +74,6 @@
     .btn {
       margin-bottom: 10px;
     }
-
-
   }
 
   // .badge{
@@ -103,28 +94,27 @@
     width: 50%;
     // padding-left: 4px;
   }
-
 }
 
 .doctor-image {
- //  width: 100px;
- //  height: 100px;
- //  margin-top: 10px;
- //  background-color: $gray-500;
- //  @include border-radius(50%);
+  //  width: 100px;
+  //  height: 100px;
+  //  margin-top: 10px;
+  //  background-color: $gray-500;
+  //  @include border-radius(50%);
   // display: inline-block;
 
-  .anchor-icon{
-   margin:0 auto;
-   width: 100px;
-   height: 100px;
-   line-height: 100px;
-   text-align: center;
-   flex-shrink: 0;
-   border-radius: 50%;
-   border: 1px solid $gray-100;
-   background-color: $gray-100;
-}
+  .anchor-icon {
+    margin: 0 auto;
+    width: 100px;
+    height: 100px;
+    line-height: 100px;
+    text-align: center;
+    flex-shrink: 0;
+    border-radius: 50%;
+    border: 1px solid $gray-100;
+    background-color: $gray-100;
+  }
 
   img {
     width: 100px;
@@ -145,11 +135,11 @@
   letter-spacing: 0.01rem;
   width: 100%;
 
-  .department-name{
+  .department-name {
     font-size: 0.85rem;
-    margin-top:0;
-    color:$primary;
-    margin-bottom:20px;
+    margin-top: 0;
+    color: $primary;
+    margin-bottom: 20px;
     // min-height: 56px;
   }
 
@@ -164,56 +154,48 @@
   // }
 
   p {
-   font-size: 0.8rem;
-   font-weight: 400;
-   letter-spacing: 0.01rem;
-   margin-top:32px;
-   margin-bottom:0;
- 
- }
- ul{
-  margin-top:56px;
-}
-
-  li{ 
-    
-    margin:4px 0;
-    padding:4px;
-    border:1px solid $gray-100;
-    background-color: $gray-100;
- 
-    @include border-radius(4px);
-
-    img{
-     margin-right: 10px;
-     width: 32px;
-     height: 32px;
-     line-height: 32px;
-     text-align: center;
-     flex-shrink: 0;
-     border-radius: 50%;
-     border: 1px solid $gray-100;
-     background-color: $gray-100;
-    }
-
-    .anchor-icon{
-     margin-right: 10px;
-     width: 32px;
-     height: 32px;
-     line-height: 32px;
-     text-align: center;
-     flex-shrink: 0;
-     border-radius: 50%;
-     border: 1px solid $gray-100;
-     background-color: $gray-100;
-   }
+    font-size: 0.8rem;
+    font-weight: 400;
+    letter-spacing: 0.01rem;
+    margin-top: 32px;
+    margin-bottom: 0;
+  }
+  ul {
+    margin-top: 56px;
   }
 
-  
+  li {
+    margin: 4px 0;
+    padding: 4px;
+    border: 1px solid $gray-100;
+    background-color: $gray-100;
 
+    @include border-radius(4px);
 
+    img {
+      margin-right: 10px;
+      width: 32px;
+      height: 32px;
+      line-height: 32px;
+      text-align: center;
+      flex-shrink: 0;
+      border-radius: 50%;
+      border: 1px solid $gray-100;
+      background-color: $gray-100;
+    }
 
-
+    .anchor-icon {
+      margin-right: 10px;
+      width: 32px;
+      height: 32px;
+      line-height: 32px;
+      text-align: center;
+      flex-shrink: 0;
+      border-radius: 50%;
+      border: 1px solid $gray-100;
+      background-color: $gray-100;
+    }
+  }
 }
 
 .patient-container {
@@ -231,54 +213,61 @@
   letter-spacing: 0.02rem;
   font-weight: 500;
 
-
   .label {
     font-size: 0.65rem;
     font-weight: 400;
     line-height: 1rem;
   }
 
-  .data {
+  
+  .data {  
+
+    .app-details-link{
+      font-size: 12px;
+      padding:2px 4px;
+      font-weight: 400;
+      margin-top:6px;
+      background-color:$gray-200;
+      // border:1px solid $primary;
+      @include border-radius(4px);
+      margin-top:4px;
+      display: inline-block;
+
+      &:hover{
+        cursor: pointer;
+      }
+    }
+
     .badge-success {
       color: $success !important;
-      padding:0;
-      border: none;
+      padding:2px;
+      border: 1px solid $success;
       background-color: white !important;
       // text-transform: lowercase;
     }
 
-    .pd-followup{
-      font-size: 12px;
-      padding:2px 6px;
-      font-weight: 400;
-      background-color:$gray-200;
-      @include border-radius(20px);
-    }
-
     .badge-primary {
       color: $primary !important;
-       border: none;
-       padding:0;
+       border: 1px solid $primary;
+       padding:2px;
        background-color: white !important;
     }
 
     .badge-info {
-      color: $info;
-      border: none;
-      padding:0;
+      color: $success;
+      border: 1px solid $success !important;
+      padding:2px;
       background-color: transparent;
     }
   }
-
-
 }
 
 .btn-checkin {
-  width:136px;
+  width: 136px;
   padding: 8px 0 !important;
   margin-top: 10px;
   margin-bottom: 20px;
-  display:block;
+  display: block;
 
   i {
     color: $white;
@@ -286,7 +275,6 @@
 }
 
 .time-container {
-
   .time-details {
     display: block;
     margin-top: 10px;
@@ -296,8 +284,6 @@
     line-height: 1.6rem;
     text-transform: uppercase;
     letter-spacing: 0.02rem;
-
-
   }
 
   .time {
@@ -305,39 +291,31 @@
     margin-left: 30px;
   }
 
-  .room-tabs{
-    .nav-link{      
+  .room-tabs {
+    .nav-link {
       padding: 4px 6px 0 0;
     }
   }
 
   ul {
-    // display:flex;
-    // flex-direction:row;
     width: 100%;
-    // flex-wrap:wrap;
-    // justify-content: space-between;
+    max-height: 250px;
+    overflow: auto;
+
     li {
       // display: inline-block;
       margin-right: 10px;
       margin-bottom: 12px;
       float: left;
 
-
       .btn {
         width: 120px;
         // width:120px;
         //  margin-right:10px;
         height: 46px;
-
-
       }
 
-      // .btn-success{
-      //    &:hover{
-
-      //     }
-      // }
+      
     }
   }
 }
@@ -345,7 +323,6 @@
 .appointment-status-list {
   margin: 15px -30px 45px;
   border-bottom: 1px solid $gray-200;
-
 
   .title {
     position: relative;
@@ -366,15 +343,13 @@
       bottom: -5px;
       background-color: $gray-600;
     }
-
-
   }
 
   .day-off {
     // width:100%;
     // text-align: center;
     display: inline-block;
-    display:flex;
+    display: flex;
     flex-direction: row;
     align-items: center;
 
@@ -383,11 +358,9 @@
       display: block;
       color: $danger;
       margin-right: 10px;
-
     }
 
-    span{
-
+    span {
     }
   }
 
@@ -399,11 +372,11 @@
       font-size: 42px !important;
       display: block;
       color: $danger;
-
     }
   }
 
-  .appointment-status-list, .appointment-badge {
+  .appointment-status-list,
+  .appointment-badge {
     .btn-success {
       // background-color: adjust-hue($success,20%);
 
@@ -427,34 +400,62 @@
     .fa-check-circle {
       display: none;
       margin-right: 4px;
-
     }
 
-    .fa-tag{
+    .fa-tag {
       display: inline;
-      color:$white;
+      color: $white;
     }
 
     &.active {
-      .fa-check-circle{
+      .fa-check-circle {
         display: inline;
         margin-right: 4px;
-        color:$white;
-
+        color: $white;
       }
 
-      .fa-tag{
+      .fa-tag {
         display: none;
-        $color:$gray-900;
+        $color: $gray-900;
       }
     }
-
   }
-
 
   @media (max-width: 1199px) {
     .hide-on-md {
       display: none;
     }
   }
+}
+
+#scrollbar_appt-scrollbar{
+  .track-vertical {
+    top: 2px;
+    bottom: 2px;
+    right: 2px;
+    border-radius: 3px;
+    /*background: rgba(255, 255, 255, 0.111);*/
+     background: #f1f1f1;
+}
+
+.track-vertical .thumb-vertical {
+    position: relative;
+    display: block;
+    width: 100%;
+    cursor: pointer;
+    border-radius: inherit;
+    /*background-color: rgba(123, 154, 255, 0.418);*/
+    background: #888;
+}
+.view {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    overflow: scroll;
+    margin-right: -15px;
+    margin-bottom: -17px !important;
+    background:transparent;
+}
 }
