--- a/packages/apps/client/src/container/ClientAppointmentStatus/appointment-status.scss
+++ b/packages/apps/client/src/container/ClientAppointmentStatus/appointment-status.scss
@@ -172,9 +172,13 @@
   }
 
   .data {
+    .badge{
+      padding:2px;
+    }
+
     .badge-success {
       color: $success !important;
-      padding:0;
+     
       border: 1px solid $success;
       background-color: white !important;
       // text-transform: lowercase;
@@ -206,7 +210,7 @@
     .badge-info {
       color: $info;
       border: none;
-      padding:0;
+      
       background-color: transparent;
     }
   }
@@ -214,35 +218,28 @@
 
 }
 
+
 .action-wrapper{
   .btn{
     display: inline-block;
     font-size:13px;
+    padding: 10px 12px !important;
+    width:auto
    
   }
+
+  .btn-checkin {
+    width:auto;
+    margin:6px;
+  
+  
+    i {
+      color: $white;
+    }
+  } 
+  
 }
 
-.btn-checkin {
-  width:auto;
-  padding: 6px 8px !important;
-  // margin-top: 10px;
-  // margin-bottom: 10px;
-  margin:6px;
-  display:block;
-
-  i {
-    color: $white;
-  }
-}
-
-
-.btn-transfer{
-  width:auto;
-  padding: 6px 8px !important;
-  // margin-top: 10px;
-  // margin-bottom: 10px;
-  display:block;
-}
 
 .time-container {
 
@@ -265,11 +262,10 @@
   }
 
   ul {
-    // display:flex;
-    // flex-direction:row;
+
     width: 100%;
-    // flex-wrap:wrap;
-    // justify-content: space-between;
+    max-height: 250px;
+
     li {
       // display: inline-block;
       margin-right: 10px;
@@ -496,3 +492,38 @@
   }
 
   //end transfer-modal
+
+
+  
+  #scrollbar_appt-scrollbar{
+    .track-vertical {
+      top: 2px;
+      bottom: 2px;
+      right: 2px;
+      border-radius: 3px;
+      /*background: rgba(255, 255, 255, 0.111);*/
+       background: #f1f1f1;
+  }
+  
+  .track-vertical .thumb-vertical {
+      position: relative;
+      display: block;
+      width: 100%;
+      cursor: pointer;
+      border-radius: inherit;
+      /*background-color: rgba(123, 154, 255, 0.418);*/
+      background: #888;
+  }
+  .view {
+      position: absolute;
+      top: 0px;
+      left: 0px;
+      right: 0px;
+      bottom: 0px;
+      overflow: scroll;
+      margin-right: -15px;
+      margin-bottom: -17px !important;
+      background:transparent;
+  }
+  }
+  
