--- a/packages/apps/admin/src/container/AdminAppointmentCheckinQuickMenu/appointment-approval.scss
+++ b/packages/apps/admin/src/container/AdminAppointmentCheckinQuickMenu/appointment-approval.scss
@@ -233,12 +233,16 @@
     }
 }
 
+//print board scss
+
 .btn-clip {
     width: auto;
     height: auto;
     padding: 10px;
     background-color: $primary;
 }
+
+
 .clip {
     display: flex;
     flex-direction: column;
