--- a/packages/ui-components/src/CExcelDownload/excel-download.scss
+++ b/packages/ui-components/src/CExcelDownload/excel-download.scss
@@ -1,13 +1,17 @@
 .excel-download{
-    background-color:#f5f2f2;
+    // background-color:#f1f1f1;
+    // color:#585b5e;
     border-radius:4px;
     padding:4px;
+   
     img{
-        width:24px;
+        width:14px;
         height: auto;
     }
 
     &:hover{
-        background-color:#e6efff;
+        // background-color:#e6efff;
+        text-decoration: none;
+        cursor: pointer;
     }
 }
