--- a/packages/apps/client/src/container/ClientAppointmentStatusByDepartment/appointment-status.scss
+++ b/packages/apps/client/src/container/ClientAppointmentStatusByDepartment/appointment-status.scss
@@ -244,24 +244,22 @@
 
     .app-details-link{
       font-size: 12px;
-      padding:6px;
+      padding:4px 4px;
       font-weight: 400;
       margin-top:6px;
-  
-      background-color:$gray-400; 
-      // border:1px solid $gray-500;
-      color:white;
+      background-color:$gray-300;
+    
+      border:1px solid $gray-400;
       @include border-radius(4px);
       margin-top:4px;
       display: inline-block;
-      @include transition(all,0.3s,ease);
-
-      
 
       &:hover{
-        background-color:$gray-300; 
         cursor: pointer;
+        background-color:$gray-200;
+        border:1px solid $gray-200;
       }
+    
 
       span{
         color:$gray-900;
@@ -533,4 +531,25 @@
     margin-bottom: -17px !important;
     background:transparent;
 }
+}
+
+
+  //for checkin print
+  .quick-confirm{
+    max-width: 600px;
+
+    h2{
+        margin-bottom:24px;
+    }
+
+    .modal-header .close {
+        margin:0;
+        margin-left:auto;
+    }
+
+    .modal-body{
+        padding:40px;
+        padding-top:30px;
+        margin-top:-22px;
+    }
 }
