--- a/packages/common-sass/src/scss/_topbar.scss
+++ b/packages/common-sass/src/scss/_topbar.scss
@@ -172,6 +172,7 @@
     .user-profile {
         margin-top: -7px;
         // padding:0 4px;
+        
         &.show {
             background-color: #e6efff;
             @include border-radius(50%);
@@ -238,13 +239,14 @@
                 left: 8px;
                 width: 100px;
                 height: 100px;
+                border:1px solid $gray-200;
+                @include border-radius(50%);        
                
 
                 img{
                     width:100px;
                     height: 100px;
                     @include centerer;
-                    border:1px solid $gray-200;
                     @include border-radius(50%);
                 }
 
@@ -358,13 +360,18 @@
     .fav-links {
         // margin-top:-8px;
         margin-right: 10px;
+       
         .btn {
             width: 40px;
             // height: 40px;
-            color: $gray-600;
-            border: 1px solid $gray-200;
-            background-color: transparent;
+            // color: #f4cd0c;
+            color:$gray-700;
+            // border: 1px solid $gray-100;
+            // background-color: $gray-100;
             @include border-radius(50%);
+            // box-shadow: 
+            // -4px -4px 9px 0 rgba(0, 0, 0, 0.05),
+            // 4px 4px 12px rgba(0, 0, 0, 0.05);
             
 
             &:hover {
@@ -376,13 +383,7 @@
            
         }
 
-        // &:hover {
-        //     .btn {
-        //         color: $primary;
-        //         background-color: #fff;
-        //         @include border-radius(50%);
-        //     }
-        // }
+     
     }
 
     .quick-links {
@@ -398,7 +399,8 @@
 
             &:hover{
                 .fa-star{
-                    color:#f4cd0c;
+                    // color:#f4cd0c;
+                    color:$primary;
                 }
             }
         }
@@ -407,7 +409,7 @@
             background-color: $white !important;
 
             .fa-star{
-                color:#f4cd0c;
+                color:$primary;
             }
         }
 
@@ -596,7 +598,7 @@
        padding-top:15px;
    }
 
-   .modal-header{
+   .modal-header{h
        .modal-title{
            padding-left: 5px;
        }
@@ -662,7 +664,8 @@
 
         &.selected{
             .anchor-icon{
-                background-color: #f4cd0c;
+                background-color: $primary;
+                color:$white;
                 
             }
         }
