--- a/packages/ui-elements/src/CDoubleShiftSearch/doubleShiftSearch.scss
+++ b/packages/ui-elements/src/CDoubleShiftSearch/doubleShiftSearch.scss
@@ -24,6 +24,8 @@ input {
 
   }
 #menu-search{
+	// background-color:$gray-100;
+	// border: 1px solid $gray-100;
 	.search-text{
 		color:$gray-500;
 		position: absolute;
@@ -33,6 +35,7 @@ input {
 		z-index: 2;
 		font-size: 0.8rem;
 		font-weight: 400;
+		
 		// line-height: 1.5;
 	
 	}
@@ -88,12 +91,13 @@ input::-webkit-input-placeholder {
 	color:transparent;
 	position: relative;
 	
-	background: transparent url(./search.svg) no-repeat left    center;
+	background:transparent url(./search.svg) no-repeat left    center;
 	background-size:36px 18px;
 	border:1px solid transparent;
 	padding: 9px 6px;
 	box-sizing:border-box;
 	height:auto;
+	
 	@include border-radius(50%);
 
 	// -webkit-border-radius: 2px;
