--- a/packages/apps/admin/src/container/AppointmentRefundStatus/appointment-refund-status.scss
+++ b/packages/apps/admin/src/container/AppointmentRefundStatus/appointment-refund-status.scss
@@ -8,7 +8,7 @@
 @import "~@frontend-appointment/common-sass-client/src/scss/variables/custom-bootstrap-variable";
 @import '~bootstrap/scss/mixins';
 
-#appointment-refund{
+#appointment-refund-status{
   .appointment-badge{
     float: right;
     margin:10px 0;
@@ -26,17 +26,17 @@
   }
 
   .badge{
-    width:35px;
-    height: 35px;
+    width:32px;
+    height: auto;
     // top:50%;
     // left:50%;
     // transform:translate(-50%,-50%);
     text-align: center;
     vertical-align: middle;
-    font-size: 16px;
-    line-height: 22px;
+    font-size: 0.65rem;
+    line-height: 0.8rem;
     padding:6px;
-    @include border-radius(50%);
+    // @include border-radius(50%);
   }
 
   .total-amount {
