datepicker-width-issue

--- a/packages/common-sass-client/src/scss/pages/_profile-setup.scss
+++ b/packages/common-sass-client/src/scss/pages/_profile-setup.scss
@@ -492,6 +492,14 @@
 }
 
 
+.d-flex{
+    .react-datepicker-wrapper{
+        width:50%;
+    }
+}
+
+
+
 @include media-breakpoint-down(md) {
     .add-info {
         margin-bottom: 30px;
