--- a/packages/common-sass/src/scss/pages/_profile-setup.scss
+++ b/packages/common-sass/src/scss/pages/_profile-setup.scss
@@ -491,6 +491,12 @@
     margin-bottom:20px;
 }
 
+.d-flex{
+    .react-datepicker-wrapper{
+        width:50%;
+    }
+}
+
 
 @include media-breakpoint-down(md) {
     .add-info {
