--- a/packages/apps/admin/src/container/AppointmentStatus/appointment-status.scss
+++ b/packages/apps/admin/src/container/AppointmentStatus/appointment-status.scss
@@ -180,20 +180,19 @@
 
     .app-details-link{
       font-size: 12px;
-      padding:4px 4px;
+      padding:6px;
       font-weight: 400;
       margin-top:6px;
-      background-color:$gray-300;
-    
-      border:1px solid $gray-400;
+      // background-color:$gray-300;    
+      // border:1px solid $gray-400;
       @include border-radius(4px);
       margin-top:4px;
       display: inline-block;
 
       &:hover{
         cursor: pointer;
-        background-color:$gray-200;
-        border:1px solid $gray-200;
+        // background-color:$gray-200;
+        // border:1px solid $gray-200;
       }
     }
 
