--- a/packages/common-sass-client/src/scss/pages/_login.scss
+++ b/packages/common-sass-client/src/scss/pages/_login.scss
@@ -58,10 +58,10 @@ width:80%;
 margin:auto;
 text-align: left;
 position: relative;
-padding:40px 10px;;
-top: 50%;
-transform: translateY(-50%);
--webkit-transform: translateY(-50%);
+padding:40px 10px 50px;
+// top: 50%;
+// transform: translateY(-50%);
+// -webkit-transform: translateY(-50%);
 
 .login-header{
  text-align: center;
