--- a/packages/common-sass/src/scss/pages/_login.scss
+++ b/packages/common-sass/src/scss/pages/_login.scss
@@ -47,18 +47,18 @@ width:80%;
 margin:auto;
 text-align: left;
 position: relative;
-padding:40px 10px;;
-top: 50%;
-transform: translateY(-50%);
--webkit-transform: translateY(-50%);
+padding:40px 10px 50px;
+// top: 50%;
+// transform: translateY(-50%);
+// -webkit-transform: translateY(-50%);
 
 .login-header{
  text-align: center;
  padding-bottom:10px;
 
- .logo-image{
-   padding:30px 0 15px;
- }
+//  .logo-image{
+//    padding:20px 0 15px;
+//  }
 
  p{
     font-size: 16px;
