--- a/packages/common-sass/src/scss/pages/_login.scss
+++ b/packages/common-sass/src/scss/pages/_login.scss
@@ -345,7 +345,8 @@ h1 {
 }
 .ribbon {
   position: absolute;
-  left: -5px; top: -5px;
+  left: -6px;
+   top: -5px;
   z-index: 1;
   overflow: hidden;
   width: 75px; height: 75px;
