icons-back-to-react

--- a/packages/common-sass/src/scss/custom-components/_aggrid-action.scss
+++ b/packages/common-sass/src/scss/custom-components/_aggrid-action.scss
@@ -50,6 +50,13 @@
             margin-right:6px;
           
         }
+
+        svg{
+            width:15px;
+            height: auto;
+            margin-top:-2px;
+          
+        }
     }
 
 }
