--- a/packages/apps/admin/src/container/AppointmentStatus/appointment-status.scss
+++ b/packages/apps/admin/src/container/AppointmentStatus/appointment-status.scss
@@ -112,7 +112,7 @@
   height: 100px;
   margin-top: 10px;
   background-color: $gray-500;
-  @include border-radius(50%);
+  @include border-radius(0.5rem);
   // display: inline-block;
 
   img {
