--- a/packages/common-sass/src/scss/_topbar.scss
+++ b/packages/common-sass/src/scss/_topbar.scss
@@ -85,7 +85,7 @@
     }
 
     .topbar-search {
-        margin-right: -4px;
+        // margin-right: -4px;
 
         .dropdown-menu {
             width: 360px;
