--- a/packages/common-sass-client/src/scss/pages/_dashboard.scss
+++ b/packages/common-sass-client/src/scss/pages/_dashboard.scss
@@ -213,6 +213,7 @@
         }
 
         &:hover{
+            cursor: pointer;
             .rdb-container{
                 opacity: 1;
             }
