--- a/packages/apps/client/src/container/ClientAppointmentRefundStatus/appointment-refund-status.scss
+++ b/packages/apps/client/src/container/ClientAppointmentRefundStatus/appointment-refund-status.scss
@@ -18,6 +18,10 @@
       height: auto;
       line-height: 40px;
 
+      &:first-child{
+        display:none;
+      }
+
       &:last-child{
         margin-right: 0;
       }
@@ -34,6 +38,24 @@
     line-height: 0.8rem;
     padding:6px;
     text-transform: uppercase;    
+  }
+
+  #status-link-button {
+    color: $gray-600;
+    font-weight: 500;
+    margin-left: 0px;
+    padding: 8px 6px;
+
+    // &.active {
+    //   color: $gray-900;
+    //   background-color: lighten($cogent, 45%);
+    //   @include border-radius(4px);
+     
+    // }
+
+    &:hover,&:focus{
+      text-decoration: none;
+    }
   }
 
   .total-amount {
