--- a/packages/common-sass-client/src/scss/_topbar.scss
+++ b/packages/common-sass-client/src/scss/_topbar.scss
@@ -172,6 +172,7 @@
     .user-profile {
         margin-top: -7px;
         // padding:0 4px;
+        
         &.show {
             background-color: #e6efff;
             @include border-radius(50%);
@@ -239,13 +240,12 @@
                 width: 100px;
                 height: 100px;
                 border:1px solid $gray-200;
-                @include border-radius(50%);              
+                @include border-radius(50%);        
                
 
                 img{
                     width:100px;
                     height: 100px;
-                    // border:1px solid $gray-200;
                     @include centerer;
                     @include border-radius(50%);
                 }
@@ -358,34 +358,8 @@
     }
 
     .fav-links {
-        // margin-top:-8px;
+        margin-top:-3px;
         margin-right: 10px;
-        .btn {
-            width: 40px;
-            // height: 40px;
-            color:$gray-700;
-            // border: 1px solid $gray-200;
-            // background-color: $gray-100;
-            @include border-radius(50%);
-         
-            
-
-            &:hover {
-                color: $primary;
-                background-color: #fff;
-                @include border-radius(50%);
-            }
-
-           
-        }
-
-        // &:hover {
-        //     .btn {
-        //         color: $primary;
-        //         background-color: #fff;
-        //         @include border-radius(50%);
-        //     }
-        // }
     }
 
     .quick-links {
@@ -395,24 +369,56 @@
 
         .dropdown-toggle{
             i{
-                @include centerer;
+                // @include centerer;
+                margin-right:8px;
                 
             }
 
             &:hover{
                 .fa-star{
                     // color:#f4cd0c;
-                    $color:$primary;
+                    color:$primary;
                 }
             }
         }
 
+        .btn {
+            width: auto;
+            height: auto;
+            padding:6px 6px;
+            // color: #f4cd0c;
+            color:$gray-700;
+            border: 1px solid $gray-400;
+            // background-color: $gray-100;
+            @include border-radius(4px);
+            // box-shadow: 
+            // -4px -4px 9px 0 rgba(0, 0, 0, 0.05),
+            // 4px 4px 12px rgba(0, 0, 0, 0.05);
+            
+
+            &:hover,&:active,&:focus {
+                color: $gray-700;
+                background-color: #fff;
+                border:1px solid transparent;
+                @include border-radius(4px);
+            }
+
+           
+        }
+
         &.show {
             background-color: $white !important;
+            @include border-radius(4px);
+            border:none;
 
-             i{
+            .fa-star{
                 color:$primary;
             }
+
+            .btn {
+                border:1px solid transparent;
+            }
+           
         }
 
         .add-bar {     
@@ -445,6 +451,13 @@
                 i{
                     width:46px;
                     padding-left:12px;
+                    color:$gray-600;
+                }
+
+                svg{
+                    width:46px;
+                    font-size: 14px;
+                    padding-right:12px;
                     color:$gray-600;
                 }
             }
@@ -600,7 +613,7 @@
        padding-top:15px;
    }
 
-   .modal-header{
+   .modal-header{h
        .modal-title{
            padding-left: 5px;
        }
@@ -666,7 +679,7 @@
 
         &.selected{
             .anchor-icon{
-                background-color:$primary;
+                background-color: $primary;
                 color:$white;
                 
             }
