--- a/packages/apps/client/src/container/ClientDepartmentAppointmentCancellationStatus/appointment-cancellation-status.scss
+++ b/packages/apps/client/src/container/ClientDepartmentAppointmentCancellationStatus/appointment-cancellation-status.scss
@@ -11,7 +11,7 @@
 #appointment-refund-status{
   .appointment-badge{
     float: right;
-    margin:10px 0;   
+    margin: 0;   
 
     &>span{
       margin-right:20px;
