--- a/packages/apps/client/src/container/ClientDoctorAppointmentCancellationStatus/doctor-appointment-cancellation-status.scss
+++ b/packages/apps/client/src/container/ClientDoctorAppointmentCancellationStatus/doctor-appointment-cancellation-status.scss
@@ -10,7 +10,7 @@
 #appointment-refund-status{
   .appointment-badge{
     float: right;
-    margin:10px 0;   
+    margin:0;   
 
     &>span{
       margin-right:20px;
