--- a/packages/common-sass/src/scss/_topbar.scss
+++ b/packages/common-sass/src/scss/_topbar.scss
@@ -212,6 +212,26 @@
                 display: inline-block;
                 @include border-radius(50%);
             }
+
+            .image-status{
+                position: absolute;
+                width: 10px;
+                height:10px;
+                border:2px solid $white;
+               
+                top:2px;
+                right:2px;
+                z-index: 9999;
+                @include border-radius(50%);
+
+                &.active{
+                    background-color: $success;
+                }
+
+                &.inactive{
+                    background-color: $danger;
+                }
+            }
         }
 
         .dropdown-menu {
@@ -388,8 +408,8 @@
             padding:6px 6px;
             // color: #f4cd0c;
             color:$gray-700;
-            border: 1px solid $gray-400;
-            // background-color: $gray-100;
+            // border: 1px solid $gray-400;
+            background-color: white;
             @include border-radius(4px);
             // box-shadow: 
             // -4px -4px 9px 0 rgba(0, 0, 0, 0.05),
@@ -456,7 +476,7 @@
 
                 svg{
                     width:46px;
-                    font-size: 14px;
+                    font-size: 15px;
                     padding-right:12px;
                     color:$gray-600;
                 }
