--- a/packages/common-sass/src/scss/_topbar.scss
+++ b/packages/common-sass/src/scss/_topbar.scss
@@ -172,7 +172,8 @@
     .user-profile {
         margin-top: -7px;
         // padding:0 4px;
-        
+       
+
         &.show {
             background-color: #e6efff;
             @include border-radius(50%);
@@ -213,15 +214,15 @@
                 @include border-radius(50%);
             }
 
+
             .image-status{
                 position: absolute;
                 width: 10px;
-                height:10px;
-                border:2px solid $white;
-               
+                height:10px;               
                 top:2px;
-                right:2px;
+                right:1px;
                 z-index: 9999;
+                border:2px solid $white;
                 @include border-radius(50%);
 
                 &.active{
@@ -260,7 +261,7 @@
                 width: 100px;
                 height: 100px;
                 border:1px solid $gray-200;
-                @include border-radius(50%);        
+                @include border-radius(50%);
                
 
                 img{
@@ -380,17 +381,49 @@
     .fav-links {
         margin-top:-3px;
         margin-right: 10px;
+        .btn {
+            width: 40px;
+            // height: 40px;
+            color:$gray-700;
+            // border: 1px solid $gray-200;
+            // background-color: $gray-100;
+            @include border-radius(50%);
+
+            // svg{
+            //     width:20px;
+            //     height:20px;
+            // }
+
+
+
+            &:hover {
+                color: $primary;
+                background-color: #fff;
+                @include border-radius(50%);
+            }
+
+
+        }
+
+        // &:hover {
+        //     .btn {
+        //         color: $primary;
+        //         background-color: #fff;
+        //         @include border-radius(50%);
+        //     }
+        // }
     }
 
     .quick-links {
+    
         i {
             margin-top: 0;
         }
 
         .dropdown-toggle{
             i{
-                // @include centerer;
-                margin-right:8px;
+                 @include centerer;
+                // margin-right:8px;
                 
             }
 
@@ -403,32 +436,33 @@
         }
 
         .btn {
-            width: auto;
-            height: auto;
-            padding:6px 6px;
+            // width: 34px;
+            // height: 34px;
+            // padding:6px 6px;
             // color: #f4cd0c;
+            // margin-top:4px;
             color:$gray-700;
             // border: 1px solid $gray-400;
-            background-color: white;
-            @include border-radius(4px);
-            // box-shadow: 
+            // background-color:white;
+            @include border-radius(50%);
+            // box-shadow:
             // -4px -4px 9px 0 rgba(0, 0, 0, 0.05),
             // 4px 4px 12px rgba(0, 0, 0, 0.05);
-            
+
 
             &:hover,&:active,&:focus {
                 color: $gray-700;
                 background-color: #fff;
                 border:1px solid transparent;
-                @include border-radius(4px);
+                @include border-radius(50%);
             }
 
-           
+
         }
 
         &.show {
             background-color: $white !important;
-            @include border-radius(4px);
+            @include border-radius(50%);
             border:none;
 
             .fa-star{
@@ -438,7 +472,7 @@
             .btn {
                 border:1px solid transparent;
             }
-           
+
         }
 
         .add-bar {     
@@ -633,7 +667,7 @@
        padding-top:15px;
    }
 
-   .modal-header{h
+   .modal-header{
        .modal-title{
            padding-left: 5px;
        }
@@ -772,4 +806,5 @@
 #favourites{
     z-index: 99999999;
 }
+
 
