--- a/packages/ui-elements/src/CDoubleShiftSearch/doubleShiftSearch.scss
+++ b/packages/ui-elements/src/CDoubleShiftSearch/doubleShiftSearch.scss
@@ -78,7 +78,7 @@ input::-webkit-input-placeholder {
   flex-direction: row-reverse;
   position: relative;
   @include border-radius(50%);
-  margin-right:2px;
+//   margin-right:2px;
 
 //   &::before{
 // before 
