--- a/packages/apps/admin/src/container/AppointmentStatusByDepartment/appointment-status.scss
+++ b/packages/apps/admin/src/container/AppointmentStatusByDepartment/appointment-status.scss
@@ -1,34 +1,40 @@
-@import "~bootstrap/scss/functions";
 
-//custom colors
-@import "~@frontend-appointment/common-sass/src/scss/variables/custom-variables";
+ @import '~bootstrap/scss/functions';
+
+ //custom colors
+ @import "~@frontend-appointment/common-sass/src/scss/variables/custom-variables";
 
 // // Customized Bootstrap variables
-@import "~@frontend-appointment/common-sass/src/scss/variables/custom-bootstrap-variable";
-@import "~bootstrap/scss/mixins";
-@import "~@frontend-appointment/common-sass/src/scss/_custom-mixins.scss";
-
-#appointment-status {
+ @import "~@frontend-appointment/common-sass/src/scss/variables/custom-bootstrap-variable";
+ @import '~bootstrap/scss/mixins';
+ @import "~@frontend-appointment/common-sass/src/scss/_custom-mixins.scss";
+ 
+ 
+ 
+ #appointment-status {
   .filter-message {
     .message {
       width: 200px;
     }
   }
 
-  .manage-title {
+  .manage-title{
     background-color: $white;
     padding: 30px 30px 15px;
     margin: 1rem 0 0;
-    @include border-radii(0.5rem, 0.5rem, 0, 0);
+    @include border-radii(0.5rem,0.5rem, 0, 0);
+    
   }
 
-  .manage-details {
+  .manage-details{
     height: calc(100vh - 310px);
     overflow: auto;
-    margin: 0 0 1rem;
-    padding-top: 0;
-    @include border-radii(0, 0, 0.5rem, 0.5rem);
+    margin:0 0 1rem;
+    padding-top:0;
+    @include border-radii(0, 0,0.5rem,0.5rem);
   }
+
+ 
 
   .appointment-badge {
     float: right;
@@ -50,13 +56,15 @@
         height: 16px;
       }
 
-      .status-legend {
-        display: inline-flex;
-        flex-direction: column;
+      .status-legend{
+        display:inline-flex;
+        flex-direction:column;
         align-items: center;
       }
 
+
       a {
+
         color: $gray-600;
         font-weight: 500;
         margin-left: 4px;
@@ -74,6 +82,8 @@
     .btn {
       margin-bottom: 10px;
     }
+
+
   }
 
   // .badge{
@@ -94,27 +104,28 @@
     width: 50%;
     // padding-left: 4px;
   }
+
 }
 
 .doctor-image {
-  //  width: 100px;
-  //  height: 100px;
-  //  margin-top: 10px;
-  //  background-color: $gray-500;
-  //  @include border-radius(50%);
+ //  width: 100px;
+ //  height: 100px;
+ //  margin-top: 10px;
+ //  background-color: $gray-500;
+ //  @include border-radius(50%);
   // display: inline-block;
 
-  .anchor-icon {
-    margin: 0 auto;
-    width: 100px;
-    height: 100px;
-    line-height: 100px;
-    text-align: center;
-    flex-shrink: 0;
-    border-radius: 50%;
-    border: 1px solid $gray-100;
-    background-color: $gray-100;
-  }
+  .anchor-icon{
+   margin:0 auto;
+   width: 100px;
+   height: 100px;
+   line-height: 100px;
+   text-align: center;
+   flex-shrink: 0;
+   border-radius: 50%;
+   border: 1px solid $gray-100;
+   background-color: $gray-100;
+}
 
   img {
     width: 100px;
@@ -135,11 +146,11 @@
   letter-spacing: 0.01rem;
   width: 100%;
 
-  .department-name {
+  .department-name{
     font-size: 0.85rem;
-    margin-top: 0;
-    color: $primary;
-    margin-bottom: 20px;
+    margin-top:0;
+    color:$primary;
+    margin-bottom:20px;
     // min-height: 56px;
   }
 
@@ -154,48 +165,80 @@
   // }
 
   p {
-    font-size: 0.8rem;
-    font-weight: 400;
-    letter-spacing: 0.01rem;
-    margin-top: 32px;
-    margin-bottom: 0;
-  }
-  ul {
-    margin-top: 56px;
-  }
+   font-size: 0.8rem;
+   font-weight: 400;
+   letter-spacing: 0.01rem;
+   margin-top:32px;
+   margin-bottom:0;
+ 
+ }
+ ul{
+  margin-top:56px;
+}
 
-  li {
-    margin: 4px 0;
-    padding: 4px;
-    border: 1px solid $gray-100;
+  li{ 
+    
+    margin:4px 0;
+    padding:4px;
+    border:1px solid $gray-100;
     background-color: $gray-100;
-
+ 
     @include border-radius(4px);
 
-    img {
-      margin-right: 10px;
-      width: 32px;
-      height: 32px;
-      line-height: 32px;
-      text-align: center;
-      flex-shrink: 0;
-      border-radius: 50%;
-      border: 1px solid $gray-100;
-      background-color: $gray-100;
+    img{
+     margin-right: 10px;
+     width: 32px;
+     height: 32px;
+     line-height: 32px;
+     text-align: center;
+     flex-shrink: 0;
+     @include border-radius(5px);
+     border: 1px solid $gray-100;
+     background-color: $gray-100;
     }
 
-    .anchor-icon {
-      margin-right: 10px;
-      width: 32px;
-      height: 32px;
-      line-height: 32px;
-      text-align: center;
-      flex-shrink: 0;
-      border-radius: 50%;
-      border: 1px solid $gray-100;
-      background-color: $gray-100;
+    .img-container{
+      position: relative;
+      display:inline-block;
     }
+
+    .anchor-icon{
+     margin-right: 10px;
+     width: 32px;
+     height: 32px;
+     line-height: 32px;
+     text-align: center;
+     flex-shrink: 0;
+     @include border-radius(5px);
+     border: 1px solid $gray-100;
+     background-color: $gray-100;
+   }
+
+   .image-status{
+    position: absolute;
+    width: 12px;
+    height:12px;               
+    top:2px;
+    right:3px;
+    z-index: 9999;
+    border:2px solid $white;
+    @include border-radius(50%);
+
+    &.active{
+        background-color: $success;
+    }
+
+    &.inactive{
+        background-color: $danger;
+    }
+}
   }
+
+  
+
+
+
+
 }
 
 .patient-container {
@@ -213,21 +256,23 @@
   letter-spacing: 0.02rem;
   font-weight: 500;
 
+
   .label {
     font-size: 0.65rem;
     font-weight: 400;
     line-height: 1rem;
   }
 
-  
-  .data {  
+  .data {
+   
 
     .app-details-link{
       font-size: 12px;
       padding:6px;
       font-weight: 400;
       margin-top:6px;
-      // background-color:$gray-300;    
+      // background-color:$gray-300;
+    
       // border:1px solid $gray-400;
       @include border-radius(4px);
       margin-top:4px;
@@ -238,8 +283,12 @@
         // background-color:$gray-200;
         // border:1px solid $gray-200;
       }
-    }
+    
 
+      span{
+        color:$gray-900;
+      }
+    }
 
     .badge-success {
       color: $success !important;
@@ -263,21 +312,38 @@
       background-color: transparent;
     }
   }
+
+
 }
 
-.btn-checkin {
-  width: 136px;
-  padding: 8px 0 !important;
-  margin-top: 10px;
-  margin-bottom: 20px;
-  display: block;
+//start patient detail action buttons
 
-  i {
-    color: $white;
+.action-wrapper{
+  .btn{
+    display: inline-block;
+    font-size:13px;
+    padding: 10px 12px !important;
+    width:auto
+   
   }
+
+  .btn-checkin {
+    width:auto;
+    margin:6px;
+  
+  
+    i {
+      color: $white;
+    }
+  } 
+  
 }
+
+//end patient deatail action buttons
+
 
 .time-container {
+
   .time-details {
     display: block;
     margin-top: 10px;
@@ -287,6 +353,8 @@
     line-height: 1.6rem;
     text-transform: uppercase;
     letter-spacing: 0.02rem;
+
+
   }
 
   .time {
@@ -294,31 +362,46 @@
     margin-left: 30px;
   }
 
-  .room-tabs {
-    .nav-link {
+  .room-tabs{
+    .nav-link{      
       padding: 4px 6px 0 0;
     }
   }
+
+  // .time-wrapper{
+  //   max-height: 250px;
+  //   overflow: auto;
+    
+  // }
+
+  
 
   ul {
     width: 100%;
     max-height: 250px;
     overflow: auto;
-
+  
     li {
       // display: inline-block;
       margin-right: 10px;
       margin-bottom: 12px;
       float: left;
 
+
       .btn {
         width: 120px;
         // width:120px;
         //  margin-right:10px;
         height: 46px;
+
+
       }
 
-      
+      // .btn-success{
+      //    &:hover{
+
+      //     }
+      // }
     }
   }
 }
@@ -326,6 +409,7 @@
 .appointment-status-list {
   margin: 15px -30px 45px;
   border-bottom: 1px solid $gray-200;
+
 
   .title {
     position: relative;
@@ -346,13 +430,15 @@
       bottom: -5px;
       background-color: $gray-600;
     }
+
+
   }
 
   .day-off {
     // width:100%;
     // text-align: center;
     display: inline-block;
-    display: flex;
+    display:flex;
     flex-direction: row;
     align-items: center;
 
@@ -361,9 +447,11 @@
       display: block;
       color: $danger;
       margin-right: 10px;
+
     }
 
-    span {
+    span{
+
     }
   }
 
@@ -375,11 +463,11 @@
       font-size: 42px !important;
       display: block;
       color: $danger;
+
     }
   }
 
-  .appointment-status-list,
-  .appointment-badge {
+  .appointment-status-list, .appointment-badge {
     .btn-success {
       // background-color: adjust-hue($success,20%);
 
@@ -403,26 +491,30 @@
     .fa-check-circle {
       display: none;
       margin-right: 4px;
+
     }
 
-    .fa-tag {
+    .fa-tag{
       display: inline;
-      color: $white;
+      color:$white;
     }
 
     &.active {
-      .fa-check-circle {
+      .fa-check-circle{
         display: inline;
         margin-right: 4px;
-        color: $white;
+        color:$white;
+
       }
 
-      .fa-tag {
+      .fa-tag{
         display: none;
-        $color: $gray-900;
+        $color:$gray-900;
       }
     }
+
   }
+
 
   @media (max-width: 1199px) {
     .hide-on-md {
@@ -430,6 +522,8 @@
     }
   }
 }
+
+
 
 #scrollbar_appt-scrollbar{
   .track-vertical {
@@ -463,62 +557,6 @@
 }
 }
 
-
-//print board scss
-
-.btn-clip {
-  width: auto;
-  height: auto;
-  padding: 10px;
-  background-color: $primary;
-}
-
-
-.clip {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  margin-top: -20px;
-  padding: 0px 0 20px;
-  align-items: center;
-  h2{
-    margin-bottom:6px;
-  }
-
-  .fa-check-circle {
-      color:lighten($success,20%) ;
-      font-size: 80px;
-      margin-bottom: 20px;
-  }
-
-  p.load-title {
-      margin-top: 10px;
-      margin-bottom: 28px;
-      color: $success;
-      display: block;
-      font-size: 16px;
-  }
-}
-
-.clip-alert {
-  // background-color: $white;
-  padding: 15px 0px 20px 20px;
-  // .close {
-  //     color: $success;
-  // }
-  // p {
-  //     color: $success;
-  // }
-
-  .close {
-      padding-top: 1rem;
-  }
-}
-
-.btn-container{
-  display: flex;
-  flex-direction: row;
-}
 
   //for checkin print
   .quick-confirm{
