--- a/packages/apps/client/src/container/ClientAppointmentStatus/appointment-status.scss
+++ b/packages/apps/client/src/container/ClientAppointmentStatus/appointment-status.scss
@@ -108,7 +108,8 @@
   height: 100px;
   margin-top: 10px;
   background-color: $gray-500;
-  @include border-radius(50%);
+  @include border-radius(0.5rem);
+  position: relative;
   // display: inline-block;
 
   img {
@@ -117,6 +118,27 @@
     background-color: $gray-500;
     @include border-radius(0.5rem);
   }
+
+  
+
+    .image-status{
+        position: absolute;
+        width: 12px;
+        height:12px;               
+        top:2px;
+        right:1px;
+        z-index: 9999;
+        border:2px solid $white;
+        @include border-radius(50%);
+
+        &.active{
+            background-color: $success;
+        }
+
+        &.inactive{
+            background-color: $danger;
+        }
+    }
 }
 
 .doctor-details {
