--- a/packages/apps/client/src/container/ClientAppointmentStatusByDepartment/appointment-status.scss
+++ b/packages/apps/client/src/container/ClientAppointmentStatusByDepartment/appointment-status.scss
@@ -192,9 +192,14 @@
      line-height: 32px;
      text-align: center;
      flex-shrink: 0;
-     border-radius: 50%;
+     @include border-radius(5px);
      border: 1px solid $gray-100;
      background-color: $gray-100;
+    }
+
+    .img-container{
+      position: relative;
+      display:inline-block;
     }
 
     .anchor-icon{
@@ -204,10 +209,29 @@
      line-height: 32px;
      text-align: center;
      flex-shrink: 0;
-     border-radius: 50%;
+     @include border-radius(5px);
      border: 1px solid $gray-100;
      background-color: $gray-100;
    }
+
+   .image-status{
+    position: absolute;
+    width: 12px;
+    height:12px;               
+    top:2px;
+    right:3px;
+    z-index: 9999;
+    border:2px solid $white;
+    @include border-radius(50%);
+
+    &.active{
+        background-color: $success;
+    }
+
+    &.inactive{
+        background-color: $danger;
+    }
+}
   }
 
   
