--- a/packages/apps/admin/src/container/AppointmentStatusByDepartment/appointment-status.scss
+++ b/packages/apps/admin/src/container/AppointmentStatusByDepartment/appointment-status.scss
@@ -220,7 +220,7 @@
     height:12px;               
     top:2px;
     right:3px;
-    z-index: 9999;
+    z-index: 99;
     border:2px solid $white;
     @include border-radius(50%);
 
@@ -285,9 +285,9 @@
       }
     
 
-      span{
-        color:$gray-900;
-      }
+      // span{
+      //   color:$gray-900;
+      // }
     }
 
     .badge-success {
