dashboard-padding-issue

--- a/packages/common-sass-client/src/scss/pages/_dashboard.scss
+++ b/packages/common-sass-client/src/scss/pages/_dashboard.scss
@@ -479,6 +479,11 @@
         @include border-radius(0.5rem);
         // box-shadow:   -10px -10px 10px $gray-200,
         // 10px 10px 10px $gray-400; 
+
+        .chartjs-render-monitor{
+            padding:0 10px;
+        }
+
         img{
             width:100%;
             height: auto;
@@ -545,7 +550,7 @@
 
         .app-log{
             background-color:$white;
-            padding:20px 40px;
+            padding:20px 30px;
             width:100%;
             height: calc(100% - 20px);
             // box-shadow:   -10px -10px 10px $gray-200,
@@ -627,7 +632,7 @@
         .app-log{
             
             background-color:$white;
-            padding:20px 40px;
+            padding:20px 30px;
             width:100%;
             min-height: 500px;
             // box-shadow:   -10px -10px 10px $gray-200,
@@ -695,11 +700,11 @@
 
         .date-group{
             text-align: left;
-            padding-left:15px;
+            padding-left:0;
         }
 
         .date{
-            padding-right:15px;
+            padding-right:0px;
         }
 
         .doughnut-chart{
